SERVER-117012 [8.0] Enable backward compatibility for 'compactAnchorPaddingFactor' and 'maxAnchorCompactionSize' fields of fleCompactionOptions cluster parameter (#46639)

GitOrigin-RevId: 7bc22acf88d3571b6bd3a630c371f7fdb8bec692